--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <link rel="stylesheet" href="assets/css/forms.css">
         <title>LetsServ</title>
     </head>
-
     <body id="body">
         <header class="header_box" id="header">
             <div class="header_child">
@@ -436,4 +435,5 @@
         </footer>
     </body>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/forms.js"></script>
 </html>
