--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <h1>Сетевой инженер</h1>
                         <p class="about_courses">На наших курсах выможите пройти обучения даже если вы только сейчас услишали о сетевой инженерии</p>
                         <p class="num_porson">
-                            Курсы прошли: <span>12</span>
+                            Курсы прошли: <span>16</span>
                             человек
                         </p>
                     </div>
@@ -258,18 +258,18 @@
                             </div>
                             <div class="statistics_courses">
                                 <div class="statistics_box">
-                                    <h1>21 часов</h1>
+                                    <h1>40%</h1>
                                     <p>теории</p>
                                 </div>
                                 <div class="statistics_box">
-                                    <h1>38 часов</h1>
+                                    <h1>60%</h1>
                                     <p>практики</p>
                                 </div>
                             </div>
                         </div>
                         <div class="courses top__courses" id="oneCourses">
                             <div class="_courses">
-                                <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA)</p><p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
+                                <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA)</p>- 36 часов<p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
                             </div>
                             <div class="secret__container_courses" id="oneSecretContainerCourses">
                                 <div class="secret_courses">
@@ -300,7 +300,7 @@
                         </div>
                         <div class="courses bottom_courses" id="twooCourses">
                             <div class="_courses">
-                                <p>Авторский инженерный курс по <span>маршрутизации на MikroTik </span>(аналог MTCRE)</p><p style="margin-top: 8px;" class="control__swap_courses" id="twooBtnCourses">></p>
+                                <p>Авторский инженерный курс по <span>маршрутизации на MikroTik </span>(аналог MTCRE) - 48 часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="twooBtnCourses">></p>
                             </div>
                             <div class="secret__container_courses" id="twooSecretContainerCourses">
                                 <div class="secret_courses">
