--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="courses top__courses" id="oneCourses">
                             <div class="_courses">
-                                <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA)</p>- 36 часов<p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
+                                <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA) - 36 часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
                             </div>
                             <div class="secret__container_courses" id="oneSecretContainerCourses">
                                 <div class="secret_courses">
