--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="courses top__courses" id="oneCourses">
                             <div class="_courses">
-                                <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA) - 36 часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
+                                <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA) - 36 ак.часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
                             </div>
                             <div class="secret__container_courses" id="oneSecretContainerCourses">
                                 <div class="secret_courses">
@@ -300,7 +300,7 @@
                         </div>
                         <div class="courses bottom_courses" id="twooCourses">
                             <div class="_courses">
-                                <p>Авторский инженерный курс по <span>маршрутизации на MikroTik </span>(аналог MTCRE) - 48 часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="twooBtnCourses">></p>
+                                <p>Авторский инженерный курс по <span>маршрутизации на MikroTik </span>(аналог MTCRE) - 48 ак.часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="twooBtnCourses">></p>
                             </div>
                             <div class="secret__container_courses" id="twooSecretContainerCourses">
                                 <div class="secret_courses">
