--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="line__info_courses">
                 <p class="container">
-                    Ближайший курс - <span class="data_courses">27.02.2023</span>
+                    Ближайший курс (по предварительной регистрации) - <span class="data_courses">27.02.2023</span>
                 </p>
             </div>
             <div class="container container_engineer">
