--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="line__info_courses">
                 <p class="container">
-                    Ближайший курс (по предварительной регистрации) - <span class="data_courses">27.02.2023</span>
+                    Ближайший курс (по предварительной регистрации)<span class="data_courses"></span>
                 </p>
             </div>
             <div class="container container_engineer">
@@ -293,7 +293,7 @@
                                     <span>О прохождении</span>
                                     <p>- Курс проводится сертифицированным специалистом по MikroTik</p>
                                     <p>- По окончанию курса проводится тестирование по пройденному курсу</p>
-                                    <p>- При успешном прохождении тестирования выдаётся Удостоверение ГОС.ОБРАЗЦА + Сертификат</p>
+                                    <p>- При успешном прохождении тестирования выдаётся Сертификат</p>
                                     <p>- По окончанию курса вы получаете полную копию курса в подарок!</p>
                                 </div>
                             </div>
