--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <link rel="manifest" href="assets/source/favicon/site.webmanifest">
 
         <link rel="stylesheet" href="assets/fonts/roboto.css">
-        <link rel="stylesheet" href="assets/css/adaptive.css">
         <link rel="stylesheet" href="assets/css/main.css">
         <link rel="stylesheet" href="assets/css/animatic.css">
         <link rel="stylesheet" href="assets/css/forms.css">
+        <link rel="stylesheet" href="assets/css/adaptive.css">
         <title>LetsServ</title>
     </head>
     <body id="body">
@@ -22,7 +22,7 @@
             <header class="header_box" id="header">
                 <div class="header_child">
                     <div class="container_logo">
-                        <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg onclick="document.querySelector('.main_container').scrollIntoView()" width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_144_5)">
                             <path d="M7 10C5.14348 10 3.36301 10.7375 2.05025 12.0503C0.737498 13.363 1.62302e-07 15.1435 0 17C-1.62302e-07 18.8565 0.737497 20.637 2.05025 21.9497C3.36301 23.2625 5.14348 24 7 24L7 20.989C5.94206 20.989 4.92746 20.5687 4.17938 19.8206C3.43131 19.0725 3.01104 18.0579 3.01104 17C3.01104 15.9421 3.43131 14.9275 4.17938 14.1794C4.92746 13.4313 5.94206 13.011 7 13.011L7 10Z" fill="white"/>
                             <path d="M19 28C19 27.0807 18.8189 26.1705 18.4672 25.3212C18.1154 24.4719 17.5998 23.7003 16.9497 23.0503C16.2997 22.4002 15.5281 21.8846 14.6788 21.5328C13.8295 21.1811 12.9193 21 12 21L12 24.011C12.5238 24.011 13.0425 24.1142 13.5265 24.3147C14.0105 24.5151 14.4502 24.809 14.8206 25.1794C15.191 25.5498 15.4849 25.9895 15.6853 26.4735C15.8858 26.9575 15.989 27.4762 15.989 28H19Z" fill="white"/>
@@ -41,7 +41,7 @@
                             </clipPath>
                             </defs>
                         </svg>                        
-                        <p onclick="document.querySelector('.main_container').scrollIntoView()">LetsServ</p>
+                        <p class="nav__header_logo" onclick="document.querySelector('.main_container').scrollIntoView()">LetsServ</p>
                     </div>
                     <div class="container_nav">
                         <ul>
@@ -102,12 +102,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="line__info_courses">
+                <div class="container__none line__info_courses">
                     <p class="container">
                         Ближайший курс (по предварительной регистрации)<span class="data_courses"></span>
                     </p>
                 </div>
-                <div class="container container_engineer">
+                <div class="container__none container container_engineer">
                     <div class="container__text_engineer">
                         <h1>
                             Компаниям нужны <span>сетевые инженеры</span>
@@ -120,7 +120,7 @@
                     </div>
                     <img class="img_engineer" src="assets/source/imeges/engineer.png" alt="">
                 </div>
-                <div class="container container_salary">
+                <div class="container__none container container_salary">
                     <h1>
                         Зарплата <span>сетевого инженера</span>
                     </h1>
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container about_company">
+                <div class="container__none container about_company">
                     <div class="container__text_company">
                         <h1>
                             Компания <span>Lets Serv</span>
@@ -166,7 +166,7 @@
                     </div>
                     <img class="img_company" src="assets/source/imeges/cohesion.png" alt="">
                 </div>
-                <div class="container_person">
+                <div class="container__none container_person">
                     <div class="container_cards">
                         <div class="card barracks">
                             <img class="photo_barracks" src="assets/source/imeges/person/Barracks.png" alt="">
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container containe_advantages">
+                <div class="container__none container containe_advantages">
                     <h1>
                         Преимущества нашей <span>команды</span>
                     </h1>
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="main__container_courses">
+                <div class="container__none main__container_courses">
                     <div class="container_courses">
                         <div class="container container__control_courses">
                             <div class="info_courses">
@@ -341,7 +341,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container container_services">
+                <div class="container__none container container_services">
                     <h1>Услуги от <span>LetsServ</span></h1>
                     <div class="wrapper_services">
                         <div class="text_services">
@@ -394,14 +394,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="container container_guarantees">
+                <div class="container__none container container_guarantees">
                     <h1>Наши <span>гарантии</span> <img src="assets/source/iso/3700477-certificate-certified-contract-diploma-guarantee-patent-qualification_108739 2.png" alt=""></h1>
                     <p>- Экономия материальных ресурсов, связанных с обслуживанием маршрутизаторов, компьютеров, серверов, оргтехники Вашего предприятия.</p>
                     <p>- Личный системный администратор закреплённый конкретно за вами.</p>
                     <p>- Консультация и решение проблем по месту и удалённо.</p>
                 </div>
             </main>
-            <footer class="container container_footer" id="footer">
+            <footer class="container__none container container_footer" id="footer">
                 <h1>Наши <span>контакты</span></h1>
                 <div class="s-footer">
                     <div>
