--- a/page.services.html
+++ b/page.services.html
@@ -22,25 +22,27 @@
         <header class="header_box" id="header">
             <div class="header_child">
                 <div class="container_logo">
-                    <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_144_5)">
-                        <path d="M7 10C5.14348 10 3.36301 10.7375 2.05025 12.0503C0.737498 13.363 1.62302e-07 15.1435 0 17C-1.62302e-07 18.8565 0.737497 20.637 2.05025 21.9497C3.36301 23.2625 5.14348 24 7 24L7 20.989C5.94206 20.989 4.92746 20.5687 4.17938 19.8206C3.43131 19.0725 3.01104 18.0579 3.01104 17C3.01104 15.9421 3.43131 14.9275 4.17938 14.1794C4.92746 13.4313 5.94206 13.011 7 13.011L7 10Z" fill="white"/>
-                        <path d="M19 28C19 27.0807 18.8189 26.1705 18.4672 25.3212C18.1154 24.4719 17.5998 23.7003 16.9497 23.0503C16.2997 22.4002 15.5281 21.8846 14.6788 21.5328C13.8295 21.1811 12.9193 21 12 21L12 24.011C12.5238 24.011 13.0425 24.1142 13.5265 24.3147C14.0105 24.5151 14.4502 24.809 14.8206 25.1794C15.191 25.5498 15.4849 25.9895 15.6853 26.4735C15.8858 26.9575 15.989 27.4762 15.989 28H19Z" fill="white"/>
-                        <rect x="17" y="5" width="16" height="3" fill="white"/>
-                        <rect x="17" y="14" width="16" height="3" fill="white"/>
-                        <rect width="3" height="12" transform="matrix(1 0 0 -1 17 17)" fill="white"/>
-                        <rect width="3" height="12" transform="matrix(1 0 0 -1 30 17)" fill="white"/>
-                        <path d="M27.4854 7.60663L29.6067 5.48531L24.5001 5.79077e-08L20.0001 -1.58493e-08L27.4854 7.60663Z" fill="white"/>
-                        <rect x="7" y="10" width="10" height="3" fill="white"/>
-                        <rect x="7" y="21" width="5" height="3" fill="white"/>
-                        <rect x="16" y="33" width="5" height="3" transform="rotate(-90 16 33)" fill="white"/>
-                        </g>
-                        <defs>
-                        <clipPath id="clip0_144_5">
-                        <rect width="33" height="33" fill="white"/>
-                        </clipPath>
-                        </defs>
-                    </svg>  
+                    <a href="index.html" style="margin-top: 0;">
+                        <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_144_5)">
+                            <path d="M7 10C5.14348 10 3.36301 10.7375 2.05025 12.0503C0.737498 13.363 1.62302e-07 15.1435 0 17C-1.62302e-07 18.8565 0.737497 20.637 2.05025 21.9497C3.36301 23.2625 5.14348 24 7 24L7 20.989C5.94206 20.989 4.92746 20.5687 4.17938 19.8206C3.43131 19.0725 3.01104 18.0579 3.01104 17C3.01104 15.9421 3.43131 14.9275 4.17938 14.1794C4.92746 13.4313 5.94206 13.011 7 13.011L7 10Z" fill="white"/>
+                            <path d="M19 28C19 27.0807 18.8189 26.1705 18.4672 25.3212C18.1154 24.4719 17.5998 23.7003 16.9497 23.0503C16.2997 22.4002 15.5281 21.8846 14.6788 21.5328C13.8295 21.1811 12.9193 21 12 21L12 24.011C12.5238 24.011 13.0425 24.1142 13.5265 24.3147C14.0105 24.5151 14.4502 24.809 14.8206 25.1794C15.191 25.5498 15.4849 25.9895 15.6853 26.4735C15.8858 26.9575 15.989 27.4762 15.989 28H19Z" fill="white"/>
+                            <rect x="17" y="5" width="16" height="3" fill="white"/>
+                            <rect x="17" y="14" width="16" height="3" fill="white"/>
+                            <rect width="3" height="12" transform="matrix(1 0 0 -1 17 17)" fill="white"/>
+                            <rect width="3" height="12" transform="matrix(1 0 0 -1 30 17)" fill="white"/>
+                            <path d="M27.4854 7.60663L29.6067 5.48531L24.5001 5.79077e-08L20.0001 -1.58493e-08L27.4854 7.60663Z" fill="white"/>
+                            <rect x="7" y="10" width="10" height="3" fill="white"/>
+                            <rect x="7" y="21" width="5" height="3" fill="white"/>
+                            <rect x="16" y="33" width="5" height="3" transform="rotate(-90 16 33)" fill="white"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_144_5">
+                            <rect width="33" height="33" fill="white"/>
+                            </clipPath>
+                            </defs>
+                        </svg>  
+                    </a>
                     <a href="index.html">LetsServ</a>
                 </div>
                 <div class="container_nav">
