--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="container__none line__info_courses">
+                <div class="line__info_courses">
                     <p class="container">
                         Ближайший курс (по предварительной регистрации)<span class="data_courses"></span>
                     </p>
                 </div>
-                <div class="container__none container container_engineer">
+                <div class="container container_engineer">
                     <div class="container__text_engineer">
                         <h1>
                             Компаниям нужны <span>сетевые инженеры</span>
