--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                     <img class="img_engineer" src="assets/source/imeges/engineer.png" alt="">
                 </div>
-                <div class="container__none container container_salary">
+                <div class="container container_salary">
                     <h1>
                         Зарплата <span>сетевого инженера</span>
                     </h1>
