--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container__none container about_company">
+                <div class="container about_company">
                     <div class="container__text_company">
                         <h1>
                             Компания <span>Lets Serv</span>
