--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="container_nav">
                         <ul>
                             <li>
-                                <a onclick="document.querySelector('.twoo__text_company').scrollIntoView()">Специалисты</a>
+                                <a onclick="document.querySelector('.container_person').scrollIntoView()">Специалисты</a>
                             </li>
                             <li>
                                 <a onclick="document.querySelector('.container_courses').scrollIntoView()">Курсы</a>
@@ -166,9 +166,9 @@
                     </div>
                     <img class="img_company" src="assets/source/imeges/cohesion.png" alt="">
                 </div>
-                <div class="container__none container_person">
+                <div class="container_person">
                     <div class="container_cards">
-                        <div class="card barracks">
+                        <div class="card barracks __BB">
                             <img class="photo_barracks" src="assets/source/imeges/person/Barracks.png" alt="">
                             <p class="name_barracks">Бараков Владислав Юрьевич</p>
                             <div class="info_barracks">
@@ -185,7 +185,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="card none_border korneev">
+                        <div class="card none_border korneev __BB">
                             <img class="photo_korneev" src="assets/source/imeges/person/Korneev.png" alt="">
                             <p class="name_korneev">Корнеев Матвей Олегович</p>
                             <div class="info_korneev">
@@ -200,7 +200,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="card mazhanov">
+                        <div class="card none_BB mazhanov">
                             <img class="photo_mazhanov" src="assets/source/imeges/person/Mazhanov.png" alt="">
                             <p class="name_mazhanov">Мажанов Антон Олегович</p>
                             <div class="info_mazhanov">
