--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container__none container containe_advantages">
+                <div class="container containe_advantages">
                     <h1>
                         Преимущества нашей <span>команды</span>
                     </h1>
@@ -244,7 +244,7 @@
                                     <circle cx="9" cy="9" r="9" fill="#4AFF93"/>
                                 </svg>
                             </span>
-                            <p>Большой опыт работы с оборудованием Mikrotik/Cisco/Huawei/TPLink/Dlink/</p>
+                            <p>Большой опыт работы с оборудованием Mikrotik/ Cisco/ Huawei/ TPLink/ Dlink/</p>
                         </div>
                         <div class="text_advantages">
                             <span>
