--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container__none main__container_courses">
+                <div class="main__container_courses">
                     <div class="container_courses">
                         <div class="container container__control_courses">
                             <div class="info_courses">
@@ -286,7 +286,7 @@
                             </div>
                             <div class="courses top__courses" id="oneCourses">
                                 <div class="_courses">
-                                    <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA) - 36 ак.часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="oneBtnCourses">></p>
+                                    <p>Авторский углубленный курс по <span>администрированию MikroTik </span>(аналог MTCNA) - 36 ак.часов</p><p style="margin-top: 17px; margin-left: 25px;    margin-right: 25px; font-size: 24px;" class="control__swap_courses" id="oneBtnCourses">></p>
                                 </div>
                                 <div class="secret__container_courses" id="oneSecretContainerCourses">
                                     <div class="secret_courses">
@@ -317,7 +317,7 @@
                             </div>
                             <div class="courses bottom_courses" id="twooCourses">
                                 <div class="_courses">
-                                    <p>Авторский инженерный курс по <span>маршрутизации на MikroTik </span>(аналог MTCRE) - 48 ак.часов</p><p style="margin-top: 8px;" class="control__swap_courses" id="twooBtnCourses">></p>
+                                    <p>Авторский инженерный курс по <span>маршрутизации на MikroTik </span>(аналог MTCRE) - 48 ак.часов</p><p style="margin-top: 17px; margin-left: 25px;     margin-right: 25px; font-size: 24px;" class="control__swap_courses" id="twooBtnCourses">></p>
                                 </div>
                                 <div class="secret__container_courses" id="twooSecretContainerCourses">
                                     <div class="secret_courses">
