--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container__none container container_services">
+                <div class="container container_services">
                     <h1>Услуги от <span>LetsServ</span></h1>
                     <div class="wrapper_services">
                         <div class="text_services">
@@ -394,14 +394,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="container__none container container_guarantees">
+                <div class="container container_guarantees">
                     <h1>Наши <span>гарантии</span> <img src="assets/source/iso/3700477-certificate-certified-contract-diploma-guarantee-patent-qualification_108739 2.png" alt=""></h1>
                     <p>- Экономия материальных ресурсов, связанных с обслуживанием маршрутизаторов, компьютеров, серверов, оргтехники Вашего предприятия.</p>
                     <p>- Личный системный администратор закреплённый конкретно за вами.</p>
                     <p>- Консультация и решение проблем по месту и удалённо.</p>
                 </div>
             </main>
-            <footer class="container__none container container_footer" id="footer">
+            <footer class="container container_footer" id="footer">
                 <h1>Наши <span>контакты</span></h1>
                 <div class="s-footer">
                     <div>
@@ -421,7 +421,7 @@
                             </a>                      
                         </div>
                     </div>
-                    <form id="form469870440" name='form469870440' role="form" action="mail.php" method="post" data-formactiontype="2" data-inputbox=".t-input-group" class="t-form js-form-proccess t-form_inputs-total_3 t-form_bbonly " data-success-callback="t718_onSuccess" style="width: 350px;">
+                    <form id="form469870440" name='form469870440' role="form" action="mail.php" method="post" data-formactiontype="2" data-inputbox=".t-input-group" class="t-form js-form-proccess t-form_inputs-total_3 t-form_bbonly " data-success-callback="t718_onSuccess">
                         <input type="hidden" name="formservices[]" value="a1f70d7427d5981420e4e065a7d87f1b" class="js-formaction-services">
                         <div class="js-successbox t-form__successbox t-text t-text_md" style="display:none;"></div>
                         <div class="t-form__inputsbox">
